# vmware-esxi-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.example.yaml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: API.md  DEPLOYMENT.md
examples/: secure_config_example.py
src/vmware_esxi_mcp/: __init__.py  __main__.py  config_protection.py  enhancement_2.py  enhancement_3.py  enhancement_4.py  enhancement_5.py  exceptions.py  host_monitor.py  secrets_manager.py  server.py
tests/: __init__.py  test_basic.py
tests/unit/: test_basic.py  test_esxi_connection.py  test_vm_operations.py
